# CPPApp

./: CMakeLists.txt  Database.h  Dockerfile  README.md  Student.h  main.cpp  test.cpp
.github/workflows/: docker-image.yml
